@@ -59,6 +59,7 @@ static const char *pmelf_ehdr_type_s[] = {
 static const char *pmelf_ehdr_machine_s(Elf32_Half idx)
 {
 	switch ( idx ) {
+		case EM_SPARC:  return "SPARC";
 		case EM_386:    return "Intel x86";
 		case EM_68K:    return "Motorola 68k";
 		case EM_PPC:    return "PowerPC";
